timer now starts and stops properly (even when page focus is lost), timer score included in results and stats modal, header logo resized on modal to fit menu on small screens, first clue now auto-selected when selected is null

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -40,8 +40,12 @@
   }
 
   &__logo {
-    height: 50px;
+    height: 45px;
     display: block;
+
+    @include tablet {
+      height: 50px;
+    }
   }
 
   &__icons {
